--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ theme: minima
 remote_theme: tdwg/petridish
 posts_on_home: 3
 archive_permalink: /news/
+github_edit: true
 
 # BUILD SETTINGS
 markdown: kramdown
