Edit TDWG 2022 pages
- Separate navigation
- Keynotes as team member
- Programme committee as team members
- Internal links
- <email> links
- Markdown images (especially posters + sponsors)
- Definition lists
- Keep anchors to session list

--- a/_config.yml
+++ b/_config.yml
@@ -39,3 +39,7 @@ defaults:
     values:
       permalink: "/news/:year/:slug/"   # Use /news/yyyy/{filename}/ as permalink for all posts
       toc: false
+  - scope:
+      path: "conferences/2022"
+    values:
+      navigation: tdwg-2022-navigation
