--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@
   href: /community/
 - text: Conferences
   menu:
-  - text: "2022 - Sofia, Bulgaria"
+  - text: 2022 - Sofia, Bulgaria
     href: /conferences/2022/
   - text: 2019 - Leiden, The Netherlands
     href: /conferences/2019/
