Updates to conferences/2022

--- a/_data/tdwg-2022-program-committee.yml
+++ b/_data/tdwg-2022-program-committee.yml
@@ -2,7 +2,7 @@
   role: Co-chair
   image: https://static.tdwg.org/conferences/2022/pc/barve-vijay.jpg
   description: >
-    _Bangalore, India._ Vijay started working in Biodiversity Information Management in 1995 on Medicinal Plants in India. He continued to follow his research interests of Biodiversity Informatics and Citizen Science through a Ph.D. program at the University Kansas. He has been involved with the [Audubon Core Standard](https://www.tdwg.org/standards/ac/) since its inception.
+    _Bangalore, India._ Vijay started working in Biodiversity Information Management in 1995 on Medicinal Plants in India. He continued to follow his research interests of Biodiversity Informatics and Citizen Science through a Ph.D. program at the University Kansas. He has been involved with the [Audubon Core Standard](/standards/ac/) since its inception.
   orcid: 0000-0002-4852-2567
   twitter: vijaybarve
 
@@ -28,7 +28,7 @@
   orcid: 0000-0002-7565-4389
   twitter: jgaikwad
 
-- name: Dr. Shelley James
+- name: Shelley James
   image: https://static.tdwg.org/conferences/2022/pc/james-shelley.jpg
   description: >
    Shelley is the Collections Manager at the Western Australian Herbarium. A botanical research scientist for more than two decades, she also serves the Society for the Preservation of Natural History Collections (SPNHC) as elected Member-at-Large and Representative for Oceania with The Biodiversity Information Standards (TDWG). Her recent work is focused on the expansion and improvement of herbarium collections and biodiversity data and ways to best analyze, contribute to, understand, and better our conservation efforts in Western Australia, Australia and around the world. She collaborates nationally and internationally with collections, research, cyberinfrastructure, and education communities.
@@ -37,7 +37,7 @@
 - name: Gail Kampmeier
   image: https://static.tdwg.org/conferences/2022/pc/kampmeier-gail.jpg
   description: >
-    _University of Illinois at Urbana-Champaign, Prairie Research Institute, Illinois Natural History Survey (Affiliate), Champaign, IL USA._ As an entomologist, Gail was one of the first zoologists to join TDWG in 1996. An active member of TDWG program committees since the 2013 conference in Florence, Italy, she first became involved with editing conference abstracts in the five years prior. She will serve as a mentor to this year's Program Committee. As Editor-in-Chief of the Pensoft Journal Biodiversity Information Science and Standards https://biss.pensoft.net she will help oversee the abstract submission process and encourages submission of full articles to the journal. Elected as North American representative (2008-2013) to the TDWG Exec, she has since served as an invited (non-voting) member.
+    _University of Illinois at Urbana-Champaign, Prairie Research Institute, Illinois Natural History Survey (Affiliate), Champaign, IL USA._ As an entomologist, Gail was one of the first zoologists to join TDWG in 1996. An active member of TDWG program committees since the 2013 conference in Florence, Italy, she first became involved with editing conference abstracts in the five years prior. She will serve as a mentor to this year's Program Committee. As Editor-in-Chief of the Pensoft Journal [Biodiversity Information Science and Standards](https://biss.pensoft.net) she will help oversee the abstract submission process and encourages submission of full articles to the journal. Elected as North American representative (2008-2013) to the TDWG Exec, she has since served as an invited (non-voting) member.
   orcid: https://orcid.org/0000-0002-5178-4170
   twitter: gkampmeier
 
@@ -50,7 +50,7 @@
   role: Local host liaison
   image: https://static.tdwg.org/conferences/2022/pc/penev-lyubomir.jpg
   description: >
-    Lyubomir is a Professor of Ecology at the Bulgarian Academy of Sciences, Sofia. His main interests over the past 30 years have been the methods of biodiversity study, development of software for biodiversity research and environmental assessment, biogeography, urban ecology and data publishing. He has published more than 160 papers and was co-author or (co-)editor of 8 books. Founder of Pensoft Publishers and publisher of the TDWG's Biodiversity Information Science and Standards (BISS) journal.
+    Lyubomir is a Professor of Ecology at the Bulgarian Academy of Sciences, Sofia. His main interests over the past 30 years have been the methods of biodiversity study, development of software for biodiversity research and environmental assessment, biogeography, urban ecology and data publishing. He has published more than 160 papers and was co-author or (co-)editor of 8 books. Founder of Pensoft Publishers and publisher of the TDWG's [Biodiversity Information Science and Standards](https://biss.pensoft.net/) journal.
   researchgate: Lyubomir-Penev
 
 - name: Elycia Wallis
