--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,8 @@ social:
 # THEME SETTINGS
 theme: minima
 remote_theme: tdwg/petridish
-posts_on_home: 3
+posts_on_home: false
+tweets_on_home: true
 archive_permalink: /news/
 github_edit: true
 logo: /assets/theme/images/tdwg-logo-long.svg
