--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,6 +11,8 @@
     href: /conferences/2022/
   - text: 2021 - Virtual conference
     href: /conferences/2021/
+  - text: 2020 - Virtual conference
+    href: /conferences/2020/
   - text: 2019 - Leiden, The Netherlands
     href: /conferences/2019/
   - text: 2018 - Dunedin, New Zealand
