--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ social:
 theme: minima
 remote_theme: tdwg/petridish
 posts_on_home: false
-tweets_on_home: true
+tweets_on_home: false
 archive_permalink: /news/
 github_edit: true
 logo: /assets/theme/images/tdwg-logo-long.svg
