--- a/_data/tdwg-2022-navigation.yml
+++ b/_data/tdwg-2022-navigation.yml
@@ -1,36 +1,36 @@
-- text: TDWG 2022
+- text: "TDWG 2022"
   href: /conferences/2022/
-- text: Program
+- text: "Program"
   menu:
-  - text: TDWG Proceedings
+  - text: "TDWG Proceedings"
     href: https://biss.pensoft.net/collection/384/
-  - text: Sessions
+  - text: "Sessions"
     href: /conferences/2022/session-list/
-  - text: Keynote speakers
+  - text: "Keynote speakers"
     href: /conferences/2022/keynotes/
-  - text: Posters
+  - text: "Posters"
     href: /conferences/2022/posters/
-  - text: Schedule
+  - text: "Schedule"
     href: /conferences/2022/#schedule
   - text: "---"
-  - text: Program Committee
+  - text: "Program Committee"
     href: /conferences/2022/program-committee/
-- text: Working sessions # To be updated to dropdown with working sessions + videos
+- text: "Working sessions" # To be updated to dropdown with working sessions + videos
   href: conferences/2022/working-sessions/
-- text: Submissions
+- text: "Submissions"
   menu:
-  - text: Calls
-  - text: Abstracts
+  - text: "Calls"
+  - text: "Abstracts"
     href: /conferences/2022/call-for-abstracts/
-  - text: Organized sessions
+  - text: "Organized sessions"
     href: /conferences/2022/call-for-organized-sessions/
   - text: "---"
-  - text: Instructions
-  - text: Abstract submission
+  - text: "Instructions"
+  - text: "Abstract submission"
     href: /conferences/2022/instructions-for-abstract-submission/
-  - text: Editors
+  - text: "Editors"
     href: /conferences/2022/instructions-for-editors/
-  - text: Presentations
+  - text: "Presentations"
     href: /conferences/2022/presentation-info/
-- text: Logistics
+- text: "Logistics"
   href: /conferences/2022/local-info/
