--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,52 +1,52 @@
 # Main navigation
-- text: Standards
+- text: "Standards"
   href: /standards/
-- text: Journal
+- text: "Journal"
   href: /journal/
-- text: Community
+- text: "Community"
   href: /community/
-- text: Conferences
+- text: "Conferences"
   menu:
-  - text: 2022 - Sofia, Bulgaria
+  - text: "2022 - Sofia, Bulgaria"
     href: /conferences/2022/
-  - text: 2021 - Virtual conference
+  - text: "2021 - Virtual conference"
     href: /conferences/2021/
-  - text: 2020 - Virtual conference
+  - text: "2020 - Virtual conference"
     href: /conferences/2020/
-  - text: 2019 - Leiden, The Netherlands
+  - text: "2019 - Leiden, The Netherlands"
     href: /conferences/2019/
-  - text: 2018 - Dunedin, New Zealand
+  - text: "2018 - Dunedin, New Zealand"
     href: /conferences/2018/
-  - text: 2017 - Ottawa, Canada
+  - text: "2017 - Ottawa, Canada"
     href: /conferences/2017/
-  - text: 2016 - Santa Clara de San Carlos, Costa Rica
+  - text: "2016 - Santa Clara de San Carlos, Costa Rica"
     href: /conferences/2016/
-  - text: 2015 - Nairobi, Kenya
+  - text: "2015 - Nairobi, Kenya"
     href: /conferences/2015/
-  - text: 2014 - Jönköping, Sweden
+  - text: "2014 - Jönköping, Sweden"
     href: /conferences/2014/
-  - text: 2013 - Florence, Italy
+  - text: "2013 - Florence, Italy"
     href: /conferences/2013/
-  - text: 2012 - Beijing, China
+  - text: "2012 - Beijing, China"
     href: /conferences/2012/
-  - text: 2011 - New Orleans, Louisiana, USA
+  - text: "2011 - New Orleans, Louisiana, USA"
     href: /conferences/2011/
-  - text: 2010 - Woods Hole, Massachusetts, USA
+  - text: "2010 - Woods Hole, Massachusetts, USA"
     href: /conferences/2010/
-  - text: 2009 - Montpellier, France
+  - text: "2009 - Montpellier, France"
     href: /conferences/2009/
-  - text: 2008 - Fremantle, Australia
+  - text: "2008 - Fremantle, Australia"
     href: /conferences/2008/
-  - text: 2007 - Bratislava, Slovakia
+  - text: "2007 - Bratislava, Slovakia"
     href: /conferences/2007/
-  - text: 2006 - St. Louis, Missouri, USA
+  - text: "2006 - St. Louis, Missouri, USA"
     href: /conferences/2006/
-  - text: ---
-  - text: Before 2006
+  - text: "---"
+  - text: "Before 2006"
     href: /conferences/pre-2006/
-- text: About
+- text: "About"
   menu:
-  - text: About
+  - text: "About"
     href: /about/
-- text: News
+- text: "News"
   href: /news/
