--- a/_data/tdwg-2020-navigation.yml
+++ b/_data/tdwg-2020-navigation.yml
@@ -1,31 +1,31 @@
-- text: TDWG 2020
+- text: "TDWG 2020"
   href: /conferences/2020/
-- text: Program
+- text: "Program"
   menu:
-  - text: TDWG Proceedings
+  - text: "TDWG Proceedings"
     href: https://biss.pensoft.net/collection/222/
-  - text: Sessions
+  - text: "Sessions"
     href: /conferences/2020/session-list/
-  - text: Posters
+  - text: "Posters"
     href: /conferences/2020/posters/
-  - text: Schedule
+  - text: "Schedule"
     href: /conferences/2020/#october-19-23---virtual-conference
-  - text: ---
-  - text: Code of Conduct
+  - text: "---"
+  - text: "Code of Conduct"
     href: /conferences/2020/code-of-conduct/
-- text: Working sessions
+- text: "Working sessions"
   menu:
-  - text: Working sessions
+  - text: "Working sessions"
     href: /conferences/2020/working-sessions/
-  - text: Schedule
+  - text: "Schedule"
     href: /conferences/2020/working-sessions-schedule/
-- text: Submissions
+- text: "Submissions"
   menu:
-  - text: Calls
-  - text: Abstracts
+  - text: "Calls"
+  - text: "Abstracts"
     href: /conferences/2020/call-for-abstracts/
-  - text: Instructions
-  - text: Abstract submission
+  - text: "Instructions"
+  - text: "Abstract submission"
     href: /conferences/2020/instructions-for-abstract-submission/
-  - text: Editors
+  - text: "Editors"
     href: /conferences/2020/instructions-for-editors/
