--- a/_data/tdwg-2021-program-committee.yml
+++ b/_data/tdwg-2021-program-committee.yml
@@ -1,70 +1,70 @@
-- name: Vijay Barve
+- name: "Vijay Barve"
   image: https://static.tdwg.org/conferences/2021/images/pc/barve-vijay.jpg
   description: >
     _Bangalore, India._ Vijay started working in Biodiversity Information Management in 1995 on Medicinal Plants in India. He continued to follow his research interests of Biodiversity Informatics and Citizen Science through a Ph.D. program at the University Kansas. He has been involved with the [Audubon Core Standard](/standards/ac/) since its inception.
   orcid: 0000-0002-4852-2567
   twitter: vijaybarve
 
-- name: Dimitri Brosens
+- name: "Dimitri Brosens"
   image: https://static.tdwg.org/conferences/2021/images/pc/brosens-dimi.jpg
   description: >
     _Belgian Biodiversity Platform / Research Institute for Nature and Forest, Brussels, Belgium._ Dimitri Brosens is the Biodiversity Data Liaison Manager from the Belgian Biodiversity Platform in the Flemish Research Institute for Nature and Forest since early 2009. Dimitri's ultimate goal is to get Belgium on the world map of biodiversity data. He has a particular interest in the publication, standardization and interoperability of biodiversity datasets.
   orcid: 0000-0002-0846-9116
   twitter: dimibro
 
-- name: Kimberly Cook
+- name: "Kimberly Cook"
   image: https://static.tdwg.org/conferences/2021/images/pc/cook-kimberly.jpg
   description: >
     _University of Kentucky, Lexington, KY, United States; Indiana University, Bloomington, IN, United States._ Kimberly is a Ph.D. student at the University of Kentucky studying biogeography. Informed by her background in biology and library science, she seeks to combine life history and environmental data to understand spatiotemporal patterns in biodiversity. Using this methodology, her ultimate goal is to build better relationships between academia and conservation practitioners for a more environmentally resilient future. Newly active in the TDWG community, Kimberly is eager to find new ways to think about biodiversity data and the people who generate it.
   researchgate: Kimberly-Cook-3
 
-- name: Chandra Earl
+- name: "Chandra Earl"
   image: https://static.tdwg.org/conferences/2021/images/pc/earl-chandra.jpg
   description: >
     _Bernice Pauahi Bishop Museum, Honolulu, HI, USA._ Chandra is the Joshua M. Copus Memorial Postdoctoral Fellow in Biodiversity Informatics and Computational Biology at the Bishop Museum in Honolulu, Hawaii. She received her PhD from the University of Florida where her work bridged many facets of informatics and data science, with a focus on large-scale biodiversity informatics. She is currently applying these skills to Pacific Island biodiversity, primarily making these data research-grade and available to data aggregators and island researchers.
   orcid: 0000-0001-9850-882X
   twitter: ChandraEarl
 
-- name: Luiz Gadelha
+- name: "Luiz Gadelha"
   image: https://static.tdwg.org/conferences/2021/images/pc/gadelha-luiz.jpg
   description: >
     Luiz Gadelha is a postdoctoral researcher at the Cheminformatics and Computational Metabolomics Research Group in the Institute for Analytical Chemistry and at the Fusion Research Group in the Faculty of Mathematics and Computer Science at the Friedrich-Schiller-University Jena, Germany. He is responsible for integrative research data management for the Cluster of Excellence Balance of the Microverse. He has a D.Sc. degree in Computer and Systems Engineering from the Federal University of Rio de Janeiro (UFRJ), obtained in 2012, which included a doctoral internship at the University of Chicago. Since 2004, he is a Technologist at the National Laboratory for Scientific Computing (LNCC) in Brazil (currently on leave). His main areas of research are scientific workflows, provenance, reproducibility, parallel computing, and scientific databases. He has been involved in the design and implementation of biodiversity databases such as the Brazilian Biodiversity Information System (SiBBr) - the Brazilian GBIF node, the Wildlife Health Information System (SISS-Geo), and the Brazilian Marine Biodiversity Database (BaMBa).
 
-- name: Shelley James
+- name: "Shelley James"
   image: https://static.tdwg.org/conferences/2021/images/pc/james-shelley.jpg
   description: >
     _Western Australian Herbarium, Perth, Australia._ Dr Shelley James is the Collections Manager at PERTH. She has been a botanical research scientist for more than two decades, and her research has taken her to the far reaches of the globe to see and explore some of the world’s most fascinating ecosystems, including Hawaii, Papua New Guinea, Solomon Islands, the Indian Ocean Territories, and Western Australia. Shelley currently serves the Society for the Preservation of Natural History Collections (SPNHC) as elected Member-at-Large and also The Biodiversity Information Standards (TDWG) Organization as Representative for Oceania. Her recent work is focused on the expansion and improvement of herbarium collections and biodiversity data and ways to best analyze, contribute to, understand, and better our conservation efforts in Western Australia, Australia and around the world. She collaborates nationally and internationally with collections, research, cyberinfrastructure, and education communities.
   orcid: 0000-0003-1105-1850
 
-- name: Rukaya Johaadien
+- name: "Rukaya Johaadien"
   image: https://static.tdwg.org/conferences/2021/images/pc/johadien-rukaya.jpg
   description: >
     _GBIF Norway, Natural History Museum at the University of Oslo, Oslo, Norway._ Rukaya is currently Head Engineer of the Geo-Ecology Research Group for the Natural History Museum at the University of Oslo, Norway, where she works to publish biodiversity data. She previously worked at the South African National Biodiversity Institute, and has an MSc in Conservation Biology.
 
-- name: Gail Kampmeier
+- name: "Gail Kampmeier"
   image: https://static.tdwg.org/conferences/2021/images/pc/kampmeier-gail.jpg
   description: >
     _University of Illinois at Urbana-Champaign, Prairie Research Institute, Illinois Natural History Survey (Affiliate), Champaign, IL USA._ As an entomologist, Gail was one of the first zoologists to join TDWG in 1996. An active member of TDWG program committees since the 2013 conference in Florence, Italy, she first became involved with editing conference abstracts in the five years prior. She is Editor-in-Chief of the Pensoft Journal [Biodiversity Information Science and Standards](https://biss.pensoft.net/) and served as review manager for the [Darwin Core Standard](/standards/dwc/). Elected as North American representative (2008-2013) to the TDWG Exec, she has since served as an invited (non-voting) member.
   orcid: https://orcid.org/0000-0002-5178-4170
   twitter: gkampmeier
 
-- name: Tina Loo
+- name: "Tina Loo"
   image: https://static.tdwg.org/conferences/2021/images/pc/loo-tina.jpg
   description: >
     _Naturalis Biodiversity Center, Leiden, The Netherlands; Distributed System of Scientific Collections, Leiden, The Netherlands._ Tina currently works as a senior project officer with the International Collaboration on Biodiversity Infrastructures (ISBI) as part of a distributed team working to realize construction of the pan-European Distributed System of Scientific Collections (DiSSCo) research infrastructure in 2026. Prior to this she worked coordinating several bird, mammal and butterfly data mobilization projects at Naturalis Biodiversity Center and has a background in Zoology.
 
-- name: Maxim Shashkov
+- name: "Maxim Shashkov"
   image: https://static.tdwg.org/conferences/2021/images/pc/shashkov.jpg
   description: >
     _Institute of Mathematical Problems of Biology RAS, Pushchino, Moscow Region, Russia._ Maxim has participated in GBIF activities since 2015. He participated in several Node Meetings as an observer from Russia and translated this experience into the development of an informal GBIF community in Russia. He is the admin of the related listserv and Facebook group. Maxim has taught or lectured in national courses on data standardisation and publishing as well as acted as a translator for presentations in BIODATA courses and as a mentor in Belarus and Tajikistan. He was a member of the program committee of national biodiversity data mobilization (BDI) conferences in 2018, 2020. He played a leading role in the translation of the GBIF portal interface into Russian. He participated in TDWG in 2019 (Leiden) for the first time. Scientifically, Maxim is interested in the study of forest structure using unmanned aerial vehicles (UAVs) and in population ecology of earthworms.
   orcid: 0000-0002-1328-8758
 
-- name: Visotheary Ung
+- name: "Visotheary Ung"
   image: https://static.tdwg.org/conferences/2021/images/pc/ung-theary.jpg
   description: >
     _Museum Nacional d'Histoire Naturelle, Paris, France._ As the head of BIRD, Theary's role is to assist researchers in their development projects in Biodiversity Informatics including looking for funding opportunities, helping define and write their specifications, hiring personnel and managing their projects on a daily basis. Her research is focussed on applying comparative biogeography methods to different regions of the globe with a special interest in Southeast Asia and the West Pacific region. Because she is very much interested in standardisation and interoperability, she is developing an ontology for biogeographic areas, which will facilitate their use. She serves as Secretary for Biodiversity Information Standards (TDWG).
 
-- name: Claus Weiland
+- name: "Claus Weiland"
   image: https://static.tdwg.org/conferences/2021/images/pc/weiland-claus.jpg
   description: >
     _Senckenberg - Leibniz Institution for Biodiversity and Earth System Research, Frankfurt/M, Germany._ Claus leads Senckenberg’s biodiversity informatics service team in Frankfurt/Main, Germany. He is a member of DiSSCo’s technical team and NFDI4Earth, the German Consortium for Earth System Sciences. His main field of interest is the mobilization of geobiodiversity data for grand challenge questions like One Health, Anthropocene biodiversity loss and FAIR-compliant agroscience. In this context, he is involved in the development of several knowledge representation models, including the FLORA Phenotype Ontology, EnviroPackets and openDS.
