Review and uniformalize about pages
- Include pages in navigation
- Update titles in footer
- Use correct headers
- Correct markdown
- Add table of content where necessary
- Remove background page for old exec

--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -6,9 +6,9 @@ columns:
       href: /about/contact/
     - text: "Privacy policy"
       href: /about/terms-of-use/#privacy-statement
-    - text: "Code of conduct"
+    - text: "Code of Conduct"
       href: /about/code-of-conduct/
-    - text: "Diversity and inclusion statement"
+    - text: "Diversity and Inclusion Statement"
       href: /about/diversity-inclusion/
 
 license: >
