Correct link in about dropdown

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -77,7 +77,7 @@
   - text: "Contributing to the website"
     href: /about/website-faq/
   - text: "---"
-  - text: "Logo"
+  - text: "Logos"
     href: /about/logos/
   - text: "Contact"
     href: /about/contact/
