--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -59,7 +59,7 @@
     href: /about/process/
   - text: "Constitution"
     href: /about/constitution/
-  - text: "Incorporation and status"
+  - text: "Incorporation and Status"
     href: /about/incorporation/
   - text: "---"
   - text: "Membership"
@@ -74,7 +74,7 @@
     href: /about/liability-disclaimer/
   - text: "Review Manager Guidelines"
     href: /about/review-managers/
-  - text: "Contributing to the website"
+  - text: "Contributing to the Website"
     href: /about/website-faq/
   - text: "---"
   - text: "Logos"
