--- a/_data/tdwg-2023-navigation.yml
+++ b/_data/tdwg-2023-navigation.yml
@@ -1,2 +1,17 @@
 - text: "TDWG 2023"
   href: /conferences/2023/
+- text: "Program"
+  menu:
+  - text: "Sessions"
+    href: /conferences/2023/session-list/
+# - text: "Submissions"
+#   menu:
+#   - text: "Calls"
+#   - text: "Abstracts"
+#     href: /conferences/2023/call-for-abstracts/
+#   - text: "---"
+#   - text: "Instructions"
+#   - text: "Abstract submission"
+#     href: /conferences/2023/instructions-for-abstract-submission/
+#   - text: "Editors"
+#     href: /conferences/2023/instructions-for-editors/
