Make some changes to TDWG 2023 page and link to call for abstracts

--- a/_data/tdwg-2023-navigation.yml
+++ b/_data/tdwg-2023-navigation.yml
@@ -8,7 +8,7 @@
   menu:
   - text: "Calls"
   - text: "Abstracts"
-    href: https://mailchi.mp/tdwg.org/tdwg-2023-call-for-abstracts
+    href: /conferences/2023/call-for-abstracts/
   - text: "---"
   - text: "Instructions"
   - text: "Abstract submission"
