--- a/_data/tdwg-2023-navigation.yml
+++ b/_data/tdwg-2023-navigation.yml
@@ -13,5 +13,5 @@
   - text: "Instructions"
   - text: "Abstract submission"
     href: /conferences/2023/instructions-for-abstract-submission/
-#   - text: "Editors"
-#     href: /conferences/2023/instructions-for-editors/
+  - text: "Editors"
+    href: /conferences/2023/instructions-for-editors/
