added PC to 2023 menu

--- a/_data/tdwg-2023-navigation.yml
+++ b/_data/tdwg-2023-navigation.yml
@@ -4,6 +4,8 @@
   menu:
   - text: "Sessions"
     href: /conferences/2023/session-list/
+  - text: "Program committee"
+    href: /conferences/2023/program-committee/
 - text: "Registration"
   menu:
   - text: "Registration details"
