--- a/_data/tdwg-2023-program-committee.yml
+++ b/_data/tdwg-2023-program-committee.yml
@@ -61,3 +61,9 @@
   description: >
     _Western Australian Herbarium, Department of Biodiversity, Conservation & Attractions, Perth, Australia._ Julia is the Database Management Officer at the Western Australian Herbarium. She holds a BEnvSc from Murdoch University and has always had a passion for the natural world. Her current role involves specimen digitisation, data management of herbarium collections and taxon names, as well as specimen curation. This is Julia’s first year serving as a member of the TDWG program committee; she is also a member of SPNHC and the Australian Systematic Botany Society.
   orcid: https://orcid.org/0000-0002-6041-2774
+
+- name: "Visotheary “Theary” Ung"
+  image: https://static.tdwg.org/conferences/2023/pc/ung-visotheary.jpg
+  description: >
+    _Institut de Systématique, Evolution, Biodiversité (ISYEB), CNRS-MNHN-SU-EPHE-PSL-UA, Paris, France._ Theary is a biodiversity informatics project manager and biogeographer at the french National Center for Scientific Research (CNRS) and the Muséum National d’Histoire Naturelle (MNHN) in Paris. Her research focuses on comparative biogeography, especially in the Southeast Asia region. She develops methods and informatic tools for biogeographical analysis including an ontology for biogeographic areas. She is also a member of the Equity and Inclusion group at the faculty of Sciences and Engineering of Sorbonne University in Paris where she participates in different actions toward students and the scientific community to promote equity and inclusion in Sciences. She has been involved in TDWG activities over the last 15 years, and she serves now as the secretary since 2021.
+  orcid: https://orcid.org/0000-0002-4049-0820
