--- a/_data/tdwg-2023-program-committee.yml
+++ b/_data/tdwg-2023-program-committee.yml
@@ -49,7 +49,7 @@
   image: https://static.tdwg.org/conferences/2023/pc/klazenga-niels.jpg
   description: >
     _Royal Botanic Gardens Victoria, Melbourne, Australia._ Niels Klazenga is Biodiversity Informatics Developer at the Royal Botanic Gardens Victoria. He has played a major role in the implementation of Specify as the collections database for the National Herbarium of Victoria (MEL) and in the Australasian Virtual Herbarium (AVH) and is the creator of VicFlora, the online flora of Victoria, and KeyBase, a system to manage and disseminate traditional pathway keys. Niels’s background and true calling is in bryophyte systematics and he currently leads the TDWG Taxon Concept Schema (TCS) Maintenance Group and TCS 2 Task Group.
-  orcid: 0000-0003-2224-6821
+  orcid: https://orcid.org/0000-0003-2224-6821
 
 - name: "Kristen “Kit” Lewers"
   image: https://static.tdwg.org/conferences/2023/pc/lewers-kit.jpg
@@ -61,7 +61,7 @@
   image: https://static.tdwg.org/conferences/2023/pc/mora-maria.jpg
   description: >
     _Costa Rica Institute of Technology (ITCR), Alajuela._ María is a computer scientist with more than 30 years of experience in biodiversity informatics. She is a faculty member at the Computer Science Department of the ITCR since 2017. From 1993 to 2015, she worked at the Biodiversity Informatics Program of the National Biodiversity Institute (INBio) where she had the opportunity to lead national and international biodiversity informatics projects. Her research interests include biodiversity informatics, natural language processing, and machine learning.
-  
+
 - name: "Julia Percy-Bower"
   image: https://static.tdwg.org/conferences/2023/pc/percy-bower-julia.jpg
   description: >
