--- a/_data/tdwg-2023-navigation.yml
+++ b/_data/tdwg-2023-navigation.yml
@@ -21,3 +21,5 @@
     href: /conferences/2023/instructions-for-abstract-submission/
   - text: "Editors"
     href: /conferences/2023/instructions-for-editors/
+  - text: "Presentations"
+    href: /conferences/2023/presentation-info/
