--- a/_data/tdwg-2023-program-committee.yml
+++ b/_data/tdwg-2023-program-committee.yml
@@ -68,6 +68,12 @@
     _Western Australian Herbarium, Department of Biodiversity, Conservation & Attractions, Perth, Australia._ Julia is the Database Management Officer at the Western Australian Herbarium. She holds a BEnvSc from Murdoch University and has always had a passion for the natural world. Her current role involves specimen digitisation, data management of herbarium collections and taxon names, as well as specimen curation. This is Julia’s first year serving as a member of the TDWG program committee; she is also a member of SPNHC and the Australian Systematic Botany Society.
   orcid: https://orcid.org/0000-0002-6041-2774
 
+- name: "Katherine Tattersall"
+  image: https://static.tdwg.org/conferences/2023/pc/tattersall-katherine.jpg
+  description: >
+    _National Collections and Marine Infrastructure and OBIS-AU, CSIRO, Hobart, Australia._ Katherine is a research data manager at the Information and Data Centre at CSIRO, home of OBIS-Australia. She is the Data Steward for the CSIRO National Collections and Marine Infrastructure (NCMI) Business Unit encompassing CSIRO’s National Research Collections, The Atlas of Living Australia, the marine Engineering and Technology team, Australian Marine National Facility and the Environomics Future Science Platform. Before joining CSIRO she was an Australian Research Data Cloud (ARDC) Research Data Specialist and worked for the Australian Integrated Marine Observing System (IMOS) and Australian Ocean Data Network (AODN). Katherine’s early interests focused on the spatial analysis of biological marine science data, particularly animal tracking, spatial modelling and ecosystems data. At the 11th session of the OBIS steering group in May 2023, Katherine was appointed as Co-Chair of the IODE Steering Group for OBIS.
+  orcid: https://orcid.org/0000-0001-7843-3074
+
 - name: "Visotheary “Theary” Ung"
   image: https://static.tdwg.org/conferences/2023/pc/ung-theary.jpg
   description: >
