Added Stan to 2023-PC

--- a/_data/tdwg-2023-program-committee.yml
+++ b/_data/tdwg-2023-program-committee.yml
@@ -12,6 +12,12 @@
     _Western Australian Herbarium, Department of Biodiversity, Conservation & Attractions, Perth, Australia._ A botanical research scientist for more than two decades, Dr Shelley serves as Representative for Oceania with TDWG. Her recent work is focused on the expansion and improvement of herbarium collections and biodiversity data and ways to best analyze, contribute to, understand, and better our conservation efforts in Western Australia, Australia and around the world. She collaborates nationally and internationally with collections, research, cyberinfrastructure, and education communities.
   orcid: 0000-0003-1105-1850
 
+- name: "Stan Blum"
+  image: https://static.tdwg.org/conferences/2023/pc/blum-stan-300.jpg
+  description: >
+    _TDWG Secretariat, San Francisco, CA._ Stan Blum has been a  contributor or principal analyst in the design of scientific databases for the National Museum of Natural History (Smithsonian), Museum of Vertebrate Zoology (UC Berkeley), University of Kansas (“Specify”), and the California Academy of Sciences. He has developed data standards that support data integration across natural history disciplines and organizations since 1990, including The Society of Vertebrate Paleontology, the Association of Systematics Collections (now Natural Science Collections Alliance), and the Taxonomic Databases Working Group (TDWG). The dominant theme in his career has been the integration of information across organizations and disciplines for use in biodiversity science. Currently he serves as Administrator of the TDWG Secretariat in San Francisco.
+  orcid: 0000-0002-4419-6960
+
 - name: "Vijay Barve"
   image: https://static.tdwg.org/conferences/2023/pc/barve-vijay.jpg
   description: >
