--- a/_data/tdwg-2023-program-committee.yml
+++ b/_data/tdwg-2023-program-committee.yml
@@ -19,6 +19,12 @@
   orcid: 0000-0002-4852-2567
   twitter: vijaybarve
 
+- name: "Stan Blum"
+  image: https://static.tdwg.org/conferences/2023/pc/blum-stan-300.jpg
+  description: >
+    _TDWG Secretariat, San Francisco, CA._ Stan Blum has been a  contributor or principal analyst in the design of scientific databases for the National Museum of Natural History (Smithsonian), Museum of Vertebrate Zoology (UC Berkeley), University of Kansas (Specify), and the California Academy of Sciences. He has developed data standards that support data integration across natural history disciplines and organizations since 1990, including The Society of Vertebrate Paleontology, the Association of Systematics Collections (now Natural Science Collections Alliance), and the Biodiversity Information Standards (TDWG). The main theme in his work has been the integration of information across organizations and disciplines for use in biodiversity science. Retired since 2015, he now volunteers as Administrator of the TDWG Secretariat in San Francisco.
+  orcid: 0000-0002-4419-6960
+
 - name: "Chandra Earl"
   image: https://static.tdwg.org/conferences/2023/pc/earl-chandra.jpg
   description: >
