added navigation to conf-2024

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,6 +10,8 @@
   - text: "Conferences"
     href: /conferences/
   - text: "---"
+  - text: "2024 - Ginowan, Okinawa, Japan"
+    href: /conferences/2024/
   - text: "2023 - Hobart, Australia"
     href: /conferences/2023/
   - text: "2022 - Sofia, Bulgaria"
