--- a/_data/tdwg-2024-navigation.yml
+++ b/_data/tdwg-2024-navigation.yml
@@ -1,4 +1,4 @@
-- text: "TDWG 2024"
+- text: "SPNHC-TDWG 2024"
   href: /conferences/2024/
 - text: "Code of Conduct"
   href: /conferences/2024/code-of-conduct/
