--- a/_data/tdwg-2024-navigation.yml
+++ b/_data/tdwg-2024-navigation.yml
@@ -4,8 +4,7 @@
   href: /conferences/2024/code-of-conduct/
 - text: "Program"
   menu:
-  - text: "Sessions"
-    href: /conferences/2024/session-list/
+  - text: "Sessions - expected 3 March"
   - text: "Program committee - in prep"
 - text: "Registration"
   menu:
