--- a/_data/tdwg-2024-navigation.yml
+++ b/_data/tdwg-2024-navigation.yml
@@ -5,10 +5,10 @@
 - text: "Program"
   menu:
   - text: "Sessions - expected 3 March"
-  - text: "Program committee - in prep"
+  - text: "Program committee in prep"
 - text: "Registration"
   menu:
-  - text: "Registration details - Open by 1 May"
+  - text: "Registration details Open by 1 May"
 - text: "Submissions"
   menu:
-  - text: "Call for abstracts - expected 3 March"
+  - text: "Call for abstracts expected 3 March"
