--- a/_config.yml
+++ b/_config.yml
@@ -58,3 +58,7 @@ defaults:
       path: conferences/2023
     values:
       navigation: tdwg-2023-navigation
+  - scope:
+      path: conferences/2024
+    values:
+      navigation: tdwg-2024-navigation
