--- a/_data/tdwg-2024-navigation.yml
+++ b/_data/tdwg-2024-navigation.yml
@@ -2,3 +2,16 @@
   href: /conferences/2024/
 - text: "Code of Conduct"
   href: /conferences/2024/code-of-conduct/
+- text: "Program"
+  menu:
+  - text: "Sessions"
+    href: /conferences/2024/sessions/
+- text: "Registration"
+  menu:
+  - text: "Expected to open 1 May"
+- text: "Submissions"
+  menu:
+  - text: "Calls"
+  - text: "Call for sessions closed"
+    href: https://mailchi.mp/tdwg.org/spnhc-tdwg-2024-okinawa-call-for-organized-sessions
+  - text: "Abstracts call opens 4 Mar"
