--- a/_data/tdwg-2024-navigation.yml
+++ b/_data/tdwg-2024-navigation.yml
@@ -12,6 +12,6 @@
 - text: "Submissions"
   menu:
   - text: "Calls"
-  - text: "Call for sessions closed"
+  - text: "Call for sessions (CLOSED)"
     href: https://mailchi.mp/tdwg.org/spnhc-tdwg-2024-okinawa-call-for-organized-sessions
   - text: "Abstracts call opens 4 Mar"
