--- a/_data/tdwg-2024-navigation.yml
+++ b/_data/tdwg-2024-navigation.yml
@@ -2,6 +2,11 @@
   href: /conferences/2024/
 - text: "Code of Conduct"
   href: /conferences/2024/code-of-conduct/
+  menu:
+  - text: "Code of Conduct 🇺🇸
+    href: /conferences/2024/code-of-conduct/
+  - text: "Code of Conduct 🇯🇵
+    href: /conferences/2024/code-of-conduct/ja/
 - text: "Program"
   menu:
   - text: "Sessions"
