--- a/_data/tdwg-2024-navigation.yml
+++ b/_data/tdwg-2024-navigation.yml
@@ -19,4 +19,5 @@
   - text: "Calls"
   - text: "Call for sessions (CLOSED)"
     href: https://mailchi.mp/tdwg.org/spnhc-tdwg-2024-okinawa-call-for-organized-sessions
-  - text: "Abstracts call opens 4 Mar"
+  - text: "Call for Abstracts"
+    href: /conferences/2024/call-for-abstracts/
