--- a/_data/tdwg-2024-navigation.yml
+++ b/_data/tdwg-2024-navigation.yml
@@ -21,3 +21,7 @@
     href: https://mailchi.mp/tdwg.org/spnhc-tdwg-2024-okinawa-call-for-organized-sessions
   - text: "Call for Abstracts"
     href: /conferences/2024/call-for-abstracts/
+  - text: "---"
+  - text: "Instructions"
+  - text: "OA Abstract Guidelines"
+    href: /conferences/2024/oa-abstract-submission-guidelines/
