--- a/_data/spnhc-tdwg-2024-program-committee.yml
+++ b/_data/spnhc-tdwg-2024-program-committee.yml
@@ -2,8 +2,7 @@
   role: "Co-chair"
   image: https://static.tdwg.org/conferences/2024/images/pc/bloom-david.jpg
   description: >
-    _VertNet, Berkeley, CA, USA._ Lorem ipsem.
-  orcid: 0000-0000-0000-0000
+    _University of North Carolina, Greensboro, USA._ Ranges Project Manager; TDWG Deputy Chair. David manages both the Ranges Digitization Project and VertNet. He is engaged with the GBIF community as the North American Regional Representative, and has served as an Open-Data Ambassador, mentor, and trainer. David works with data publishers and biodiversity scientists around the world to help organise, clean, and publish their data. He currently spends an inordinate amount of time herding cats and other vertebrates and sighing audibly when confronted with social media..
 
 - name: "Vijay Barve"
   image: https://static.tdwg.org/conferences/2024/images/pc/barve-vijay.jpg
