--- a/_data/spnhc-tdwg-2024-program-committee.yml
+++ b/_data/spnhc-tdwg-2024-program-committee.yml
@@ -2,7 +2,21 @@
   role: "Co-chair"
   image: https://static.tdwg.org/conferences/2024/images/pc/bloom-david.jpg
   description: >
-    _University of North Carolina, Greensboro, USA._ Ranges Project Manager; TDWG Deputy Chair. David manages both the Ranges Digitization Project and VertNet. He is engaged with the GBIF community as the North American Regional Representative, and has served as an Open-Data Ambassador, mentor, and trainer. David works with data publishers and biodiversity scientists around the world to help organise, clean, and publish their data. He currently spends an inordinate amount of time herding cats and other vertebrates and sighing audibly when confronted with social media..
+    _University of North Carolina, Greensboro, USA._ Ranges Project Manager; TDWG Deputy Chair. David manages both the Ranges Digitization Project and VertNet. He is engaged with the GBIF community as the North American Regional Representative, and has served as an Open-Data Ambassador, mentor, and trainer. David works with data publishers and biodiversity scientists around the world to help organise, clean, and publish their data. He currently spends an inordinate amount of time herding cats and other vertebrates and sighing audibly when confronted with social media.
+
+- name: "Jillian Goodwin"
+  role: "Co-chair"
+  image:
+  description: >
+    _iDigBio, Florida Museum of Natural History, Gainesville, FL, USA._ Jillian has worked with iDigBio since 2015 and currently serves as iDigBio’s Conference Manager. She coordinates iDigBio’s annual conferences including the Digital Data in Biodiversity Research Conference and BioDigiCon. She also works with the natural history collections community to develop workshops to support US digitization efforts through collaborations, promotional efforts, and development of best practices. Jillian also helped establish the DigiCoordNet effort. She believes in the importance of building and maintaining positive internal relationships as well as relationships with outside stakeholders through effective communication and organizational practices.
+
+- name: "Gregory Watkins-Colwell"
+  role: "Co-chair"
+  image: https://static.tdwg.org/conferences/2024/images/pc/watkins-colwell-greg.jpg
+  description: >
+    _Yale Peabody Museum, New Haven, CT, USA._ Greg is a Senior Collection Manager of Vertebrate Zoology (Ichthyology and Herpetology). He is active in SPNHC as well as several Ichthyology and Herpetology organisations and BCONN. He’s a founding partner in the ZooMu initiative to bridge the gap between zoos and natural history museums. He maintains a life list of birds and concerts and is always interested in adding to either. He has been known to catch lizards.
+  orcid: 0000-0002-7789-9806
+  twitter: cylon_gecko
 
 - name: "Vijay Barve"
   image: https://static.tdwg.org/conferences/2024/images/pc/barve-vijay.jpg
@@ -14,7 +28,7 @@
 - name: "Stan Blum"
   image: https://static.tdwg.org/conferences/2024/images/pc/blum-stan-300.jpg
   description: >
-    _TDWG Secretariat, San Francisco, CA._ Stan Blum has been a contributor or principal analyst in the design of scientific databases for the National Museum of Natural History (Smithsonian), Museum of Vertebrate Zoology (UC Berkeley), University of Kansas (Specify), and the California Academy of Sciences. He has helped develop data standards that support data integration across natural history disciplines and organizations since 1990, including The Society of Vertebrate Paleontology, the Association of Systematics Collections (now Natural Science Collections Alliance), and the Biodiversity Information Standards (TDWG). The main theme in his work has been the integration of information across organizations and disciplines for use in biodiversity science. Retired since 2015, he now volunteers as Administrator of the TDWG Secretariat in San Francisco.
+    _TDWG Secretariat, San Francisco, CA._ Stan Blum has been a contributor or principal analyst in the design of scientific databases for the National Museum of Natural History (Smithsonian), Museum of Vertebrate Zoology (UC Berkeley), University of Kansas (Specify), and the California Academy of Sciences. He has helped develop data standards that support data integration across natural history disciplines and organizations since 1990, including The Society of Vertebrate Paleontology, the Association of Systematics Collections (now Natural Science Collections Alliance), and the Biodiversity Information Standards (TDWG). The main theme in his work has been integrating biodiversity information across organizations and disciplines. Retired since 2015, he now volunteers as Administrator of the TDWG Secretariat in San Francisco.
   orcid: 0000-0002-4419-6960
 
 - name: "Christina Byrd"
@@ -50,6 +64,12 @@
   orcid: 0000-0002-5178-4170
   twitter: gkampmeier
 
+- name: "Erica Krimmel"
+  image: 
+  description: >
+    _Sacramento, CA, USA._ Erica is a biodiversity information scientist who has been involved as a member of SPNHC since 2015 and TDWG since 2019. She has worked in several natural history collections, as well as for iDigBio, and her expertise lies in designing and implementing systems to increase the digital availability and impact of biodiversity data.
+  orcid: 0000-0003-3192-0080 
+
 - name: "Kristen “Kit” Lewers"
   image: https://static.tdwg.org/conferences/2024/images/pc/lewers-kit.jpg
   description: >
@@ -63,9 +83,15 @@
   orcid: 0000-0002-6041-2774
 
 - name: "Arjan Basu Roy"
-  image:
+  image: https://static.tdwg.org/conferences/2024/images/pc/roy-arjan-basu.jpg
   description: >
-    Arjan (Secretary, Nature Mates, Kolkata) co-founded the group with school friends in the early 90s (originally a WWF India Nature Club). Passionate about nature, particularly butterflies & birds, he pursues wildlife research & citizen science despite no formal training. Urban biodiversity & creating green spaces are his other core interests. Authored field guides for birds & butterflies.
+    _Secretary, Nature Mates, Kolkata._  Arjan co-founded the group with school friends in the early 90s (originally a WWF India Nature Club). Passionate about nature, particularly butterflies & birds, he pursues wildlife research & citizen science despite no formal training. Urban biodiversity & creating green spaces are his other core interests. Authored field guides for birds & butterflies.
+
+- name: "Harlan Svoboda"
+  image: 
+  description: >
+    _United States National Arboretum, U.S. Department of Agriculture, Washington, D.C., USA._ Harlan is a botanist and taxonomist with the USDA and the Curator of the herbarium collections. He is also the administrator of the ARS Biocollections portal, Data Steward for the federal government’s scientific collections registry, and is a leader in digitization efforts across the government. On the research front, Harlan is a specialist in the systematics and taxonomy of passionflowers (Passiflora) and a proponent of collections-based investigations across a multitude of fields. In addition to being an active member of SPNHC, Harlan also serves the natural history community through roles in several systematics- and collections-oriented societies.
+  orcid: 0000-0001-9081-5980
 
 - name: "Visotheary “Theary” Ung"
   image: https://static.tdwg.org/conferences/2024/images/pc/ung-theary.jpg
